<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterVisitActivity" >

     <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        android:text="@string/rejestracja_wizyty"
        android:visibility="gone" />

    <EditText
        android:id="@+id/etName"
        android:inputType="text"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_below="@id/tvTitle"
        android:layout_marginTop="8dp"
        android:hint="@string/imie"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/etSurname"
         />

    <EditText
        android:id="@id/etSurname"
        android:inputType="text"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_below="@id/tvTitle"
        android:layout_alignParentRight="true"
        android:hint="@string/nazwisko"/>
    <EditText
        android:id="@+id/etPhoneNumber"
        android:inputType="phone"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_below="@id/etName"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/etEmail"
        android:hint="@string/numer_telefonu" />
    <EditText
        android:id="@id/etEmail"
        android:inputType="textEmailAddress"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_below="@id/etSurname"
        android:layout_alignParentRight="true"
        android:hint="@string/adres_email"/>
    <Spinner
        android:id="@+id/sDate"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="4dp"
        android:layout_below="@id/etPhoneNumber"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/sWorker"/>
    <Spinner
        android:id="@+id/sHour"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="4dp"
        android:layout_toLeftOf="@+id/sService"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/sDate"        
        />
    <Spinner 
        android:id="@id/sService"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_below="@id/sDate"
        android:layout_toLeftOf="@+id/bPostData"
        />
    <Spinner
        android:id="@id/sWorker"
        android:layout_width="400dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="4dp"
        android:layout_below="@id/etEmail"
        android:layout_alignParentRight="true"
        />
    <Button 
        android:id="@id/bPostData"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_below="@id/sWorker"
        android:layout_alignParentRight="true"
        android:textSize="18sp"
        android:text="@string/zarejestruj"
        android:onClick="postRegisterData"
        />

    <TextView
        android:id="@+id/tvDebug"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sWorker"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"/>

</RelativeLayout>
